nueva versión del hypeblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hypeblog</title>
+        <title>Bienvenido a Hypeblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -18,3 +18,5 @@
         </div>
     </body>
 </html>
+
+#
