--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imágenes/logonike.png" />
                 Hypeblog
                 <span id="tagline"> Tu blog de cabecera</span>
             </div>
@@ -18,4 +19,3 @@
         </div>
     </body>
 </html>
-
