--- a/blogpost.html
+++ b/blogpost.html
@@ -15,8 +15,9 @@
                 <p> Este blog tiene la información más importante generada al momento</p>
                 <p>Suscríbete y dale like al fanpage</p>
             </div>
+            <div id="footer">
+                No es mucho pero es trabajo honesto.
+            </div>
         </div>
     </body>
 </html>
-
-#
