Modificaciones mínimos al texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,8 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Con este párrafo daremos inicio a la explicación de la clase de hoy de Git</p>
-                <p> Este blog tiene la información más importante generada al momento</p>
+                <p>Con este párrafo daremos inicio a la explicación de la clase de hoy de Git y GitHub</p>
+                <p> Este blog tiene la información más importante generada al momento, incluidas las principales notas e información a tomar en cuenta</p>
                 <p>Suscríbete y dale like al fanpage</p>
             </div>
             <div id="footer">
